# agent

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: deploy.yml
agents/: memory_agent.py  orchestrator.py  recruiter.py  run_worker.py
config/: settings.py
dashboard/: app.py
dashboard/pages/: 1_Analytics.py  2_Memory_Bank.py  3_Portfolio.py  insights.py
database/: db.py  schema.sql
scripts/: generate_insights.py  ingest_docs.py
tests/: conftest.py  test_memory.py  test_validator.py
tools/: search_docs.py  validator.py  x_api.py
